<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Verification</string>

    <!-- 通用字符串-->
    <string name="common_sure">sure</string>
    <string name="common_cancel">cancel</string>
    <string name="common_tips">tips</string>
    <string name="common_no_data">no data</string>
    <string name="web_url">http://www.xiongdi.cn/</string>
    <string name="common_date">2016-03-22</string>

    <!--登录界面-->
    <string name="login">Login</string>
    <string name="login_failed_tips">username or password incorrect</string>
    <string name="login_default_user">userc</string>
    <string name="login_default_password">123</string>

    <!-- 填写登记信息界面-->
    <string name="write_info_title">Information</string>
    <string name="info_title_ID">ID</string>
    <string name="info_item_title_name">NAME</string>
    <string name="info_item_title_gender">GENDER</string>
    <string name="info_item_title_birthday">BIRTHDAY</string>
    <string name="info_item_title_address">ADDRESS</string>
    <string name="info_item_title_ID_NO">ID_NO</string>
    <string name="info_item_ID_constant">00000</string>
    <string name="info_item_gender_constant">male</string>

    <string name="bottom_back">back</string>
    <string name="bottom_take_picture">take picture</string>
    <string name="bottom_save">save</string>
    <string name="bottom_gather">gather</string>
    <string name="tab_indicator_title_Left">Left Hand</string>
    <string name="tab_indicator_title_right">Right Hand</string>
    <string name="tab_indicator_title_picture">Picture</string>

    <string name="information_incomplete">Incomplete information</string>

    <string name="save_success">save successfully</string>
    <string name="file_no_exit">file does not exist</string>
    <string name="save_failed">save failed</string>
    <string name="no_fingerprint">please input the fingerprint</string>
    <string name="verify">verify</string>

    <string name="camera_open_failed">camera open failed!</string>

    <!-- 关于卡的字符串-->
    <string name="read_card">read card</string>
    <string name="save_to_card_message">save this information to card?</string>
    <string name="saving_to_card">saving…</string>
    <string name="reading_from_card">reading…</string>
    <string name="save_failed_message">save failed, try again?</string>
    <string name="read_failed_message">read failed</string>

    <!--裁剪图片界面-->
    <string name="crop_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="crop_done">DONE</string>
    <string name="crop_pick_error">No image sources available</string>
    <string name="crop_saving">Saving picture…</string>
    <string name="crop_wait">Please wait…</string>

</resources>
