<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <Button
        android:id="@+id/bottom_left_bt"
        style="?android:attr/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@mipmap/deep_blue_bg"
        android:text="@string/bottom_back"/>

    <Button
        android:id="@+id/bottom_middle_bt"
        style="?android:attr/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@mipmap/deep_blue_bg"
        android:text="@string/bottom_take_picture"/>

    <Button
        android:id="@+id/bottom_right_bt"
        style="?android:attr/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@mipmap/deep_blue_bg"
        android:text="@string/bottom_save"/>
</LinearLayout>